# spacex

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  start.sh
data/spacex_api_data_pipeline/2023-09-01_00:18:14/raw/: launches.json
migration/: env.py
migration/versions/: 677fc09721a2_spacex_init.py
src/config/: config.py
src/core/data_pipeline/: data_pipeline.py  spacex_api_data_pipeline.py  task.py
src/core/schemas/spacex/raw/: launches.py  rockets.py
src/core/spacex_api/: spacex_api_client.py
src/db/: asyncpg_db.py
src/logs/: config.py
tests/: spacex_client_test.py
tests/resources/: launches.json
